trunk/Archive2/fe/8823cf71edf56c/output
main.cpp:28:9: error: no matching member function for call to 'a_member'
        a_member<T>();
        ^~~~~~~~~~~
main.cpp:37:12: note: in instantiation of member function 'A<float>::another_member' requested here
    AFloat.another_member();
           ^
main.cpp:17:24: note: candidate template ignored: disabled by 'enable_if' [with S = float]
    typename enable_if<std::is_integral<S>::value>::type a_member() {
                       ^
1 error generated.
